--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <swagger-annotations.version>1.5.14</swagger-annotations.version>
         <springfox-swagger2.version>2.8.0</springfox-swagger2.version>
         <springfox-swagger-ui.version>2.8.0</springfox-swagger-ui.version>
+        <spring-boot-starter-data-redis.version>2.1.4.RELEASE</spring-boot-starter-data-redis.version>
 <!--        <nacos-config.version>2.1.1.RELEASE</nacos-config.version>-->
 <!--        <nacos-discovery.version>2.1.1.RELEASE</nacos-discovery.version>-->
     </properties>
@@ -121,6 +122,12 @@
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
                 <version>${swagger-annotations.version}</version>
+            </dependency>
+            <!--redis-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot-starter-data-redis.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
