--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -9,13 +9,13 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>novel</artifactId>
+    <artifactId>blog</artifactId>
     <packaging>pom</packaging>
-    <name>novel ${project.version}</name>
+    <name>blog ${project.version}</name>
 
     <modules>
-        <module>novel-api</module>
-        <module>novel-service</module>
+        <module>blog-api</module>
+        <module>blog-service</module>
     </modules>
 
     <build>
