--- a/support/pom.xml
+++ b/support/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>demo</artifactId>
         <groupId>com.alice.zhang</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -84,7 +84,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com/alice/zhang/support/DemoApiApplication.java</mainClass>
+                    <mainClass>com.alice.zhang.support.SupportApplication</mainClass>
                     <fork>true</fork>
                 </configuration>
             </plugin>
