--- a/support/pom.xml
+++ b/support/pom.xml
@@ -118,6 +118,13 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
+                    <include>bootstrap.yml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
                     <include>**</include>
                 </includes>
                 <filtering>false</filtering>
