调整项目结构

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>support</module>
         <module>blog</module>
         <module>novel</module>
+        <module>zuul</module>
     </modules>
 
     <properties>
