--- a/support/pom.xml
+++ b/support/pom.xml
@@ -8,14 +8,35 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>support</artifactId>
+    <packaging>pom</packaging>
+    <name>support ${project.version}</name>
+
     <modules>
         <module>support-common</module>
         <module>support-service</module>
     </modules>
 
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>support</artifactId>
-    <name>support ${project.version}</name>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <configuration>
+                        <executable>true</executable>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
