--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -37,6 +37,7 @@
         <druid.version>1.1.10</druid.version>
         <nacos-client.version>1.4.1</nacos-client.version>
         <fastjson.version>1.2.73</fastjson.version>
+        <jsoup.version>1.12.1</jsoup.version>
         <pagehelper-spring-boot-starter.version>1.3.1</pagehelper-spring-boot-starter.version>
     </properties>
 
@@ -164,6 +165,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>${jsoup.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
