--- a/blog/blog-api/blog-api-core/pom.xml
+++ b/blog/blog-api/blog-api-core/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>blog-api</artifactId>
-        <groupId>com.alice.zhang</groupId>
+        <groupId>com.alice</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
