--- a/orm/pom.xml
+++ b/orm/pom.xml
@@ -4,12 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>demo</artifactId>
-        <groupId>com.alice.zhang</groupId>
+        <groupId>com.alice</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
     <artifactId>orm</artifactId>
+    <name>orm ${project.version}</name>
+
+    <modules>
+        <module>orm-novel</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
