--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.alice.zhang</groupId>
+    <groupId>com.alice</groupId>
     <artifactId>demo</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
@@ -19,7 +19,7 @@
         <module>novel</module>
         <module>zuul</module>
         <module>orm</module>
-        <module>orm-novel</module>
+        <module>orm</module>
     </modules>
 
     <properties>
@@ -30,7 +30,7 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.alice.zhang</groupId>
+                <groupId>com.alice</groupId>
                 <artifactId>bom</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
                 <type>pom</type>
