--- a/support/support-common/pom.xml
+++ b/support/support-common/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>support</artifactId>
-        <groupId>com.alice.zhang</groupId>
+        <groupId>com.alice</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
@@ -104,10 +104,6 @@
                     <artifactId>mybatis-spring</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
