--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
         <module>novel</module>
         <module>zuul</module>
         <module>orm</module>
-        <module>orm</module>
     </modules>
 
     <properties>
@@ -64,6 +63,20 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <profiles>
         <profile>
