update: 格式化代码

--- a/support/support-common/pom.xml
+++ b/support/support-common/pom.xml
@@ -104,6 +104,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
