--- a/orm/pom.xml
+++ b/orm/pom.xml
@@ -32,6 +32,8 @@
     </dependencies>
 
     <build>
+        <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
+        <finalName>${artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
