--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -22,6 +22,8 @@
     </dependencies>
 
     <build>
+        <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
+        <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
