--- a/orm/pom.xml
+++ b/orm/pom.xml
@@ -17,11 +17,6 @@
         <module>orm-novel</module>
     </modules>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.alice</groupId>
@@ -39,6 +34,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>2.3.0.RELEASE</version>
                     <configuration>
                         <executable>true</executable>
                     </configuration>
