--- a/zuul/zuul-service/pom.xml
+++ b/zuul/zuul-service/pom.xml
@@ -7,10 +7,11 @@
         <groupId>com.alice</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <artifactId>zuul-service</artifactId>
-    <name>zuul-service</name>
+    <name>zuul-service ${project.version}</name>
 
     <dependencies>
         <dependency>
@@ -25,11 +26,6 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
     <build>
         <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
         <finalName>${artifactId}</finalName>
@@ -37,6 +33,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.0.RELEASE</version>
                 <configuration>
                     <mainClass>com.alice.ZuulApplication</mainClass>
                 </configuration>
