--- a/business-orm/pom.xml
+++ b/business-orm/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>com.alice</groupId>
-            <artifactId>support-common</artifactId>
+            <artifactId>business-support-core</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
