--- a/business-bom/pom.xml
+++ b/business-bom/pom.xml
@@ -41,6 +41,8 @@
         <velocity.version>1.7</velocity.version>
         <poi-ooxml.version>3.10-FINAL</poi-ooxml.version>
         <guava.version>31.1-jre</guava.version>
+        <jedis.version>4.2.3</jedis.version>
+        <gson.version>2.10.1</gson.version>
     </properties>
 
     <!--子模块继承后,提供作用:锁定版本+子module不用groupId和version-->
@@ -192,7 +194,18 @@
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
             </dependency>
-
+            <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
