--- a/business-bom/pom.xml
+++ b/business-bom/pom.xml
@@ -21,7 +21,9 @@
         <alibaba.version>2.2.0.RELEASE</alibaba.version>
 
         <junit.version>4.12</junit.version>
-        <log4j.version>1.2.17</log4j.version>
+        <log4j-to-slf4j.version>2.17.0</log4j-to-slf4j.version>
+        <log4j-api.version>2.17.0</log4j-api.version>
+        <logstash-logback-encoder.version>4.11</logstash-logback-encoder.version>
         <lombok.version>1.18.24</lombok.version>
         <mysql.version>8.0.28</mysql.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
@@ -43,7 +45,7 @@
         <guava.version>31.1-jre</guava.version>
         <jedis.version>4.2.3</jedis.version>
         <gson.version>2.10.1</gson.version>
-        <redisson-spring-boot-starter.version>3.17.4</redisson-spring-boot-starter.version>
+        <redisson-spring-boot-starter.version>3.13.6</redisson-spring-boot-starter.version>
     </properties>
 
     <!--子模块继承后,提供作用:锁定版本+子module不用groupId和version-->
@@ -141,6 +143,22 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-to-slf4j</artifactId>
+                <version>${log4j-to-slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.logstash.logback</groupId>
+                <artifactId>logstash-logback-encoder</artifactId>
+                <version>${logstash-logback-encoder.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${springfox-swagger2.version}</version>
@@ -227,18 +245,18 @@
     <!--    </distributionManagement>-->
 
     <!--第三方maven私服-->
-    <repositories>
-        <repository>
-            <id>nexus-aliyun</id>
-            <name>Nexus aliyun</name>
-            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
+<!--    <repositories>-->
+<!--        <repository>-->
+<!--            <id>nexus-aliyun</id>-->
+<!--            <name>Nexus aliyun</name>-->
+<!--            <url>http://maven.aliyun.com/nexus/content/groups/public</url>-->
+<!--            <releases>-->
+<!--                <enabled>true</enabled>-->
+<!--            </releases>-->
+<!--            <snapshots>-->
+<!--                <enabled>false</enabled>-->
+<!--            </snapshots>-->
+<!--        </repository>-->
+<!--    </repositories>-->
 
 </project>
