--- a/business-feign/business-feign-blog/business-feign-blog-core/pom.xml
+++ b/business-feign/business-feign-blog/business-feign-blog-core/pom.xml
@@ -2,16 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>business-service</artifactId>
         <groupId>com.alice</groupId>
+        <artifactId>business-feign-blog</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>business-service-blog</artifactId>
-    <name>business-service-blog ${project.version}</name>
+    <artifactId>business-feign-blog-core</artifactId>
+    <name>business-feign-blog-core ${project.version}</name>
     <packaging>jar</packaging>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -20,12 +26,5 @@
             <version>1.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>com.alice</groupId>
-            <artifactId>business-feign-blog-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
-
 </project>
