--- a/business-service/business-service-demo/pom.xml
+++ b/business-service/business-service-demo/pom.xml
@@ -27,6 +27,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.alice</groupId>
+            <artifactId>business-feign-blog-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -37,7 +43,6 @@
             <artifactId>javatuples</artifactId>
             <version>1.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
     </dependencies>
 
 </project>
