--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,9 @@
             </plugins>
         </pluginManagement>
 
-        <!-- 产生的构件的文件名，默认值是${artifactId}-${version}。 -->
-        <finalName>${artifactId}-${version}</finalName>
+<!--         产生的构件的文件名，默认值是${artifactId}-${version}。 -->
+<!--        <finalName>${artifactId}-${version}</finalName>-->
+        <finalName>${artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
