--- a/business-service/business-service-demo/pom.xml
+++ b/business-service/business-service-demo/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>commons-net</artifactId>
             <version>3.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.55</version>
+        </dependency>
     </dependencies>
 
     <build>
